[gd_scene load_steps=2 format=3 uid="uid://d1i0rgs816lqs"]

[ext_resource type="Script" uid="uid://bo2qq5ixea73g" path="res://scenes/victory/victory_character_panel.gd" id="1_pu7mi"]

[node name="VictoryCharacterPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pu7mi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Alice"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Lv. "

[node name="LabelLevel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "99"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "EXP"

[node name="LabelEXPCurrent" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "99999"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = " / "

[node name="LabelEXPNext" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "99999"

[node name="ProgressBarEXP" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
show_percentage = false

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="LabelLvGain" type="Label" parent="Control"]
modulate = Color(1, 1, 0, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_right = -16.0
offset_bottom = 23.0
grow_horizontal = 0
text = "+99"
horizontal_alignment = 2
